--- a/uc-app-menu.css
+++ b/uc-app-menu.css
@@ -104,8 +104,8 @@
 } */
 
 #PanelUI-menu-button {
-    padding-inline: var(--toolbarbutton-outer-padding)
-        calc(var(--toolbarbutton-outer-padding) + 3px) !important;
+    padding-inline: var(--toolbarbutton-outer-padding) !important;
+    margin-inline-end: 3px !important;
 }
 
 #PanelUI-menu-button[badge-status=""] > .toolbarbutton-badge-stack > .toolbarbutton-badge {
