--- a/uc-panels.css
+++ b/uc-panels.css
@@ -131,7 +131,7 @@ panel[type="arrow"][side="top"] {
 }
 
 #confirmation-hint {
-    margin-top: -7px;
+    margin-top: -9px;
 }
 
 .subviewbutton {
